* fix dark mode * add new theme - industrial

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3,6 +3,8 @@
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
+
+    padding: 16px;
 }
 
 /* Margin */
@@ -19,7 +21,8 @@
 }
 
 #blog h1, #blog h2 {
-    padding-bottom: .3em;
+    /*padding-bottom: .3em;*/
+    /*line-height: 1.3;*/
     border-bottom: 1px solid #eaecef;
 }
 
