--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -31,9 +31,6 @@
 
     min-height: 100vh;
 
-    padding-left: 1rem;
-    padding-right: 1rem;
-
     flex-grow: 1;
 
     max-width: 1012px;
